Fixed map overflow issues

--- a/src/map/Map.scss
+++ b/src/map/Map.scss
@@ -1,6 +1,5 @@
 .map {
-  width: 100vw;
-  height: 100vh;
+  flex-grow: 1;
 }
 
 .maplibregl-ctrl-group {
